<resources>

    <!-- HOME PAGE -->
    <string name="app_name">drh-demo</string>
    <string name="calculator">Material and Cost Calculator</string>
    <string name="packing">Packing List Generator </string>
    <string name="certificate">Certificate of Analysis </string>

    <string name="product_names">Product Name:</string>
    <string-array name="products">
        <item>Product1</item>
        <item>Product2</item>
        <item>Product3</item>
        <item>Product4</item>
    </string-array>



    <!-- CALCULATOR -->
    <string name="title">Material and Cost Calculator</string>
    <string name="product_type">Select Product: </string>
    <string name="order_quantity">Enter Order Quantity (kgs): </string>
    <string name="confirm_quantity">Confirm Quantity</string>
    <string name="goto_table">Next</string>



    <!-- CERTIFICATE -->
    <string name="quantity">Quantity:</string>
    <string name="lot">Lot no:</string>
    <string name="appearance">Appearance:</string>
    <string-array name="appearance">
        <item>Complies</item>
        <item>Does not Comply</item>
    </string-array>
    <string name="purity">Purity:</string>
    <string name="tlc">TLC:</string>
    <string name="add">Add Lot</string>
    <string name="view">View</string>



    <!-- PACKING -->
    <string name="pack">Packing List</string>
    <string name="to">To:</string>
    <string name="name">Name:</string>
    <string name="packno">P.O.NO:</string>
    <string name="bag">Bag No:</string>
    <string name="nobag">No of Bags:</string>
    <string name="gross">Gross wt:</string>
    <string name="tare">Tare wt:</string>
    <string name="net">Net wt:</string>
    <string name="delete">delete</string>



    <!-- TABLE -->
    <string name="col1">NAME OF RAW MATERIAL</string>
    <string name="col2">QUANTITY</string>
    <string name="col3">COST</string>
    <string name="load_data">Load Data</string>


    <!-- TABLE 1 -->
    <string name="product1">Product 1</string>
    <string name="t1_row1">Element 1</string>
    <string name="t1_row2">Element 2</string>
    <string name="t1_row3">Element 3</string>



    <!-- TABLE 2 -->
    <string name="product2">Product 2</string>
    <string name="t2_row1">Element 1</string>
    <string name="t2_row2">Element 2</string>
    <string name="t2_row3">Element 3</string>



    <!-- TABLE 3 -->
    <string name="product3">Product 3</string>
    <string name="t3_row1">Element 1</string>
    <string name="t3_row2">Element 2</string>
    <string name="t3_row3">Element 3</string>




    <!-- TABLE 4 -->
    <string name="product4">Product 4</string>
    <string name="t4_row1">Element 1</string>
    <string name="t4_row2">Element 2</string>
    <string name="t4_row3">Element 3</string>



</resources>