<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10pt"
    android:id="@+id/homepage"
    android:orientation="vertical"
    tools:context=".packing">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180pt"
        android:layout_height="50pt"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/pack"
        android:textColor="@color/blue"
        android:textStyle="italic"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/to"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/name"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_type"
                android:textColor="@color/blue"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/spin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/products"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/packno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/packno"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/quantity"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/lot"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/bag"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/nobag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/nobag"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/gross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/gross"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/tare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/tare"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/net"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="130pt"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/add"
                android:layout_width="60pt"
                android:layout_height="20pt"
                android:layout_gravity="center"
                android:layout_marginRight="10pt"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/view"
                android:layout_width="60pt"
                android:layout_height="20pt"
                android:layout_gravity="center"
                android:text="@string/view"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>