<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10pt"
    android:id="@+id/homepage"
    android:orientation="vertical"
    tools:context=".calculator">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180pt"
        android:layout_height="60pt"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textStyle="italic"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_type"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/product_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/products"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_margin="12dp">

            <TextView
                android:text="@string/order_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/edit_order_quantity"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/confirm_quantity"
            android:layout_width="80pt"
            android:layout_height="35pt"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="@string/confirm_quantity"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/goto_table"
            android:layout_width="80pt"
            android:layout_height="35pt"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="@string/goto_table"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>